producer working avro schema validation
Signed-off-by: Cece Ma <mayuqing131@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,8 @@ build/
 ### Local env ###
 .env
 
+### Register-schema scripts (dev/local) ###
+development/scripts/register-schema/
+
 ### Mac OS ###
 .DS_Store
