--- a/docs/source/byte-array/manifests/api-key/byte-arr-consumer-config.yaml
+++ b/docs/source/byte-array/manifests/api-key/byte-arr-consumer-config.yaml
@@ -15,6 +15,7 @@ data:
             # Example: OAuth2 - authParams: "${PULSAR_OAUTH_CLIENT_SECRET}"
         consumer:  # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-consumer
           enabled: true
+          useAutoConsumeSchema: true
           consumerConfig:
             # Single topic (string) or multiple topics (comma-separated string)
             topicNames: "persistent://public/default/test-topic"
