fixed/added tests
Signed-off-by: Cece Ma <mayuqing131@gmail.com>

--- a/docs/source/byte-array/manifests/api-key/byte-arr-consumer-config.yaml
+++ b/docs/source/byte-array/manifests/api-key/byte-arr-consumer-config.yaml
@@ -16,6 +16,7 @@ data:
         consumer:  # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-consumer
           enabled: true
           useAutoConsumeSchema: true
+          dropMessageOnSchemaValidationFailure: false
           consumerConfig:
             # Single topic (string) or multiple topics (comma-separated string)
             topicNames: "persistent://public/default/test-topic"
