feat: consumer schema validation for avro (#59)
Signed-off-by: Cece Ma <mayuqing131@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ build/
 ### Local env ###
 .env
 
-### Register-schema scripts (dev/local) ###
+### Register-schema scripts (not fully tested; exclude from consumer-schema-validation) ###
 development/scripts/register-schema/
 
 ### Mac OS ###
